# procure.me

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE.txt  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
archive/: main.py
data/: .gitignore
data/gold/metadata/: CW0301.json  CW0302.json  CW0303.json  CW0304.json  CW0305.json  CW0306.json  CW0307.json  CW0308.json  CW0309.json  CW0310.json  CW0311.json  CW0312.json  CW0313.json  CW0314.json  CW0315.json  CW0316.json  CW0317.json  CW0318.json  CW0319.json  CW0320.json  CW0321.json  CW0322.json  CW0323.json  CW0324.json  CW0325.json  CW0326.json  CW0327.json  CW0328.json  CW0329.json  CW0330.json  CW0331.json  CW0332.json  CW0333.json  CW0334.json  CW0335.json  CW0336.json  CW0337.json  CW0338.json  CW0339.json  CW0340.json  (+10 more)
data/gold/summaries/: CW0301.json  CW0302.json  CW0303.json  CW0304.json  CW0305.json  CW0306.json  CW0307.json  CW0308.json  CW0309.json  CW0310.json  CW0311.json  CW0312.json  CW0313.json  CW0314.json  CW0315.json  CW0316.json  CW0317.json  CW0318.json  CW0319.json  CW0320.json  CW0321.json  CW0322.json  CW0323.json  CW0324.json  CW0325.json  CW0326.json  CW0327.json  CW0328.json  CW0329.json  CW0330.json  CW0331.json  CW0332.json  CW0333.json  CW0334.json  CW0335.json  CW0336.json  CW0337.json  CW0338.json  CW0339.json  CW0340.json  (+10 more)
data/pos/: po_1.txt  po_2.txt  po_3.txt
data/raw/commodity_codes/: commodity_codes_v1.csv
data/silver/contracts/: CW0301.pdf.json  CW0302.pdf.json  CW0303.pdf.json  CW0304.pdf.json  CW0305.pdf.json  CW0306.pdf.json  CW0307.pdf.json  CW0308.pdf.json  CW0309.pdf.json  CW0310.pdf.json  CW0311.pdf.json  CW0312.pdf.json  CW0313.pdf.json  CW0314.pdf.json  CW0315.pdf.json  CW0316.pdf.json  CW0317.pdf.json  CW0318.pdf.json  CW0319.pdf.json  CW0320.pdf.json  CW0321.pdf.json  CW0322.pdf.json  CW0323.pdf.json  CW0324.pdf.json  CW0325.pdf.json  CW0326.pdf.json  CW0327.pdf.json  CW0328.pdf.json  CW0329.pdf.json  CW0330.pdf.json  CW0331.pdf.json  CW0332.pdf.json  CW0333.pdf.json  CW0334.pdf.json  CW0335.pdf.json  CW0336.pdf.json  CW0337.pdf.json  CW0338.pdf.json  CW0339.pdf.json  CW0340.pdf.json  (+10 more)
diagrams/: .$metadata-extraction.xml.bkp  .$product-blueprint-v1.drawio.bkp  contract-doc-hierarchy.xml  metadata-extraction.xml  procure.me-blue-prints.drawio  product-blueprint-v1.drawio
infra/: ec2-infra-streamlit.yml
notebooks/: add-data-chroma.ipynb  crud_session_test.ipynb  download-mxbai-embedding.ipynb  lancedb-with-nomic.ipynb  llamaindex-pymupdf.ipynb  metadata-extraction.ipynb  ollama-mxbai-embeeding.ipynb  ollama-with-openai.ipynb  openai-test.ipynb  react-scratch.ipynb  test-chroadb.ipynb  test-chroma-db.ipynb  test-client.ipynb
scripts/: chat_api.sh  data_download_S3.sh  query.sql
src/api/: app.py
src/client/: terminal_client.py
src/clis/: chat.py  display_table.py  manage_collection.py  manage_table.py  manage_vectordb.py
src/dbm/: pg_create_metadata_tbl.py
src/etl/: bronze_to_silver.py  lancedb_nive_etl.py  load_metadata_platinum.py  load_summeries_platinum.py  metadata_extraction_gold.py  summery_generation_gold.py
src/procureme/: __init__.py  embeeders.py  embeeding_funcs.py
src/procureme/agents/: answer_critique.py  orchrastrator.py  query_rewriter.py  ragagent.py  tool_executor.py  tools.py
src/procureme/clients/: embedder.py  ollama_embedder.py  openai_chat.py  openai_embedder.py  ui_client.py
src/procureme/configurations/: aimodels.py  app_configs.py  db_connection_config.py
src/procureme/dbmodels/: doc_metadata.py  doc_summery.py  session.py
src/procureme/interfaces/: cachingdb_interface.py  rdb_interface.py  retriver_interface.py
src/procureme/models/: cc_codes_model.py  chat_interface.py  contract_model.py
src/procureme/vectordb/: interface.py  lance_vectordb.py  utils.py
src/services/: contract_app.py  ncc_search_app.py
src/services/routers/: chat.py  schema.py
src/smart_procurement/: embeeders.py  embeeding_funcs.py
src/smart_procurement/configurations/: db_connection_config.py
src/smart_procurement/interfaces/: cachingdb_interface.py  chat_interface.py  rdb_interface.py  retriver_interface.py
src/smart_procurement/models/: cc_codes_model.py  chat_interface.py  chroma_cc_model.py
src/ui/: chat_app.py  main.py
tests/: __init__.py
vectordb/contracts.db/contracts_naive.lance/_transactions/: 0-5ed350bc-c31f-465b-856c-01f42e204d9c.txn  0-8d111a86-7049-462d-a666-8aa210a8174a.txn  1-42b85e1e-12b8-4588-8550-7b64c2c17760.txn
vectordb/contracts.db/contracts_naive.lance/_versions/: 1.manifest  2.manifest
vectordb/contracts.db/contracts_naive.lance/data/: 569d19aa-da20-4258-9211-0095d86c6c86.lance
vectordb/contracts.db/contracts_oai.lance/_transactions/: 0-7caf6e7c-1a42-45cb-b5de-e35323295785.txn  (+1 more)
(+13 files in other folders)
